tests/ui/parser/attr-dangling-in-fn.rs
//@error-in-other-file:expected statement

fn f() {
  #[foo = "bar"]
}

fn main() {
}
